kube-yaml/hello-svc-cip.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-svc-cip
  labels:
    app: hello-world
spec:
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: hello-world
