kube-yaml/hello-svc-lb.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-svc-lb
  labels:
    app: hello-world
spec:
  type: LoadBalancer
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: hello-world
